<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        android:paddingTop="64dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@mipmap/mentaid_icon_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/mentaid_string"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableLeft="@drawable/ic_insert_emoticon_black_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_insert_emoticon_black_24dp"
            android:hint="@string/first_name_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableLeft="@drawable/ic_insert_emoticon_black_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_insert_emoticon_black_24dp"
            android:hint="@string/last_name_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="38dp"

            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sign_up_as_string"
                android:textColor="#000"
                android:textSize="16sp"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/user_string"
                android:textSize="16sp"
                android:textColor="#000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/counsellor_string"
                android:textColor="#000"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email_address_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:hint="@string/phone_number_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableEnd="@drawable/ic_remove_red_eye_black_24dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/re_enter_password"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="64dp"
            android:background="#fa45d9"
            android:padding="18sp"
            android:text="@string/register_string"
            android:textColor="#fff"
            android:textSize="28sp"
            />
    </LinearLayout>
</RelativeLayout>