<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@mipmap/mentaid_icon_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="64dp"
            android:text="@string/mentaid_string"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/email_address_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_out_line"
            android:drawableEnd="@drawable/ic_remove_red_eye_black_24dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="16dp"
            android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password_string"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="32dp"
            android:background="#fa45d9"
            android:padding="18sp"
            android:text="@string/login_string"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account_absence_string"
            android:textColor="#000000" />
    </LinearLayout>
</RelativeLayout>